--- a/attendance-tracking-tool-app/package.json
+++ b/attendance-tracking-tool-app/package.json
@@ -13,7 +13,6 @@
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/papaparse": "^5.3.15"
   }
 }
